# Market-Sense

./: README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  db.py  main.py
backend/app/api/: routes.py
backend/app/models/: entities.py
backend/app/services/: advanced_analysis.py  ml_services.py  seed.py  sentiment_analyzer.py  url_extractor.py
backend/instance/: market_sentiment.db
backend/market_sentiment_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: README.md  architecture_diagrams.md  synopsis.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/.next/: trace
frontend/.next/server/: _error.js
frontend/.next/server/pages/: _app.js  _error.js  index.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/.next/static/webpack/: 8a25ddc4ae46e8c2.webpack.hot-update.json  webpack.37995e594da0cc98.hot-update.js  webpack.4b359ce7f39cf2a3.hot-update.js  webpack.4fc512f27ecfd60c.hot-update.js  webpack.52f6d639c22db1ad.hot-update.js  webpack.5cc556734a380eaa.hot-update.js  webpack.6947a2ec783dbb15.hot-update.js  webpack.8a25ddc4ae46e8c2.hot-update.js  webpack.8a6079745e646601.hot-update.js  webpack.cc57eafed771b5bf.hot-update.js  webpack.f3aa19e59fc08b9c.hot-update.js
frontend/src/components/: DashboardStats.tsx  ImageAnalyzer.tsx  RecentAnalyses.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/types/: market.ts
frontend/styles/: Dashboard.module.css  globals.css
(+15 files in other folders)
